[gd_scene load_steps=6 format=3 uid="uid://dhf36hlemaiir"]

[ext_resource type="FontFile" uid="uid://b3h400kk2q3w3" path="res://ArtAssets/Fonts/KodeMono-Bold.ttf" id="1_k527e"]
[ext_resource type="Script" path="res://Scripts/end_score.gd" id="1_rvrnu"]
[ext_resource type="StyleBox" uid="uid://bvur6kg07qs48" path="res://StyleBoxes/menu_buttons_normal.tres" id="2_f1n0v"]
[ext_resource type="StyleBox" uid="uid://dcffcrd0ebmhd" path="res://StyleBoxes/menu_buttons_hover.tres" id="3_mprgw"]

[sub_resource type="CanvasTexture" id="CanvasTexture_sogpl"]

[node name="EndScore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rvrnu")

[node name="bg_art" type="TextureRect" parent="."]
modulate = Color(0.152941, 0.152941, 0.266667, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_sogpl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -399.0
offset_right = 399.0
offset_bottom = 83.0
grow_horizontal = 2
theme_override_constants/margin_top = 55

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.827451, 0.670588, 1)
theme_override_fonts/font = ExtResource("1_k527e")
theme_override_font_sizes/font_size = 64
text = "Your light fades away"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 70

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MergeScore" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.827451, 0.670588, 1)
theme_override_fonts/font = ExtResource("1_k527e")
theme_override_font_sizes/font_size = 36
vertical_alignment = 1

[node name="NewCardScore" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.827451, 0.670588, 1)
theme_override_fonts/font = ExtResource("1_k527e")
theme_override_font_sizes/font_size = 36
vertical_alignment = 1

[node name="EnemiesKilledScore" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.827451, 0.670588, 1)
theme_override_fonts/font = ExtResource("1_k527e")
theme_override_font_sizes/font_size = 36
vertical_alignment = 1

[node name="CardsUsedScore" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.827451, 0.670588, 1)
theme_override_fonts/font = ExtResource("1_k527e")
theme_override_font_sizes/font_size = 36
vertical_alignment = 1

[node name="TotalScore" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.827451, 0.670588, 1)
theme_override_fonts/font = ExtResource("1_k527e")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 70

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.827451, 0.670588, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.960784, 0.937255, 1)
theme_override_fonts/font = ExtResource("1_k527e")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_f1n0v")
theme_override_styles/hover = ExtResource("3_mprgw")
theme_override_styles/pressed = ExtResource("2_f1n0v")
text = "RESTART"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Restart" to="." method="_on_restart_pressed"]
